# atomos

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  IMPLEMENTATION.md  Makefile  README.md
core/atomos-agents/: .gitignore  Dockerfile.test  Makefile  README.md  pyproject.toml  run_acp_server.sh  test_streaming.py
core/atomos-agents/scripts/: atomos-tmux-attach.sh
core/atomos-agents/src/: __init__.py  acp_server.py  agent_factory.py  bridge_pb2.py  bridge_pb2.pyi  bridge_pb2_grpc.py  filesystem.py  memory.py  secret_store.py  security.py  server.py  tool_registry.py
core/atomos-agents/src/atomos_agents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
core/atomos-agents/src/tools/: _shared.py  amberol.py  app_adapter.py  arxiv.py  authenticator.py  browser.py  browser_cloud.py  browser_local.py  chatty.py  cli_wrapper.py  contacts.py  devtools.py  drawio.py  editor.py  geary.py  google_workspace.py  karlender.py  loupe.py  notejot.py  notion.py  passes.py  pidif.py  podcasts.py  researcher.py  shell.py  skills.py  superpowers.py  vocalis.py
core/atomos-agents/tests/: conftest.py  mock_agent.py  run_integration.sh  test_acp_server.py  test_agent.py  test_amberol_tools.py  test_app_adapter.py  test_app_bridge_integration.py  test_app_integration.py  test_arxiv_tools.py  test_authenticator_tools.py  test_bridge_tools_integration.py  test_browser_integration.py  test_browser_tools.py  test_chatty_tools.py  test_cli_bridge_integration.py  test_cli_wrapper.py  test_contacts_tools.py  test_cosmic_terminal_integration.py  test_devtools_tools.py  test_drawio_tools.py  test_e2e_workflows.py  test_editor_tools.py  test_geary_tools.py  test_google_workspace_tools.py  test_integration_managers.py  test_karlender_tools.py  test_loupe_tools.py  test_notejot_tools.py  test_notion_tools.py  test_passes_tools.py  test_pidif_tools.py  test_podcasts_tools.py  test_researcher_tools.py  test_secrets.py  test_security.py  test_security_approval_integration.py  test_server.py  test_server_credentials.py  test_shared_infra.py  (+6 more)
core/atomos-bridge/: Cargo.toml  README.md
core/atomos-bridge/proto/: bridge.proto
core/atomos-bridge/src/: client.rs  lib.rs
core/atomos-bridge/tests/: test_bridge.rs  test_reconnection.rs
core/context-manager/: Cargo.toml  README.md
core/context-manager/src/: cache.rs  clustering.rs  discovery.rs  lib.rs  lifecycle.rs  main.rs  prompt_builder.rs  rag.rs  router.rs  summarization.rs
core/context-manager/tests/: integration_tests.rs
core/task-manager/: Cargo.toml  README.md
core/task-manager/src/: agent.rs  connectors.rs  lib.rs  schedule.rs  workflow.rs
core/task-manager/tests/: integration.rs
cosmic-mobile-lockscreen/: Cargo.toml  README.md
cosmic-mobile-lockscreen/src/: auth.rs  engine.rs  greetd.rs  greeter.rs  logind.rs  main.rs  osk.rs  render.rs  spec.rs  ui.rs  wayland.rs
cosmic-mobile-lockscreen/tests/: integration.rs
e2e-tests/: conftest.py  pyproject.toml  test_performance.py  test_pipeline.py  test_reliability.py  test_security.py
e2e-tests/atomos_e2e_tests.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
gluon/: .gitignore  Cargo.toml  README.md
gluon/compiler/gluon-checker/: Cargo.toml
gluon/compiler/gluon-checker/src/: dimensions.rs  lib.rs  types.rs
gluon/compiler/gluon-cli/: Cargo.toml
gluon/compiler/gluon-cli/src/: lib.rs  main.rs
gluon/compiler/gluon-codegen/: Cargo.toml
gluon/compiler/gluon-codegen/src/: lib.rs
gluon/compiler/gluon-lexer/: Cargo.toml
gluon/compiler/gluon-lexer/src/: lib.rs
gluon/compiler/gluon-parser/: Cargo.toml
gluon/compiler/gluon-parser/src/: ast.rs  lib.rs  parser.rs
gluon/compiler/gluon-resolver/: Cargo.toml
gluon/compiler/gluon-resolver/src/: lib.rs
gluon/compiler/gluon-temporal/: Cargo.toml
gluon/compiler/gluon-temporal/src/: lib.rs
gluon/compiler/gluon-verify/: Cargo.toml
gluon/compiler/gluon-verify/src/: lib.rs
gluon/examples/: chat_ui.g  cloud_backend.g  conv_layer.g  counter.g  mnist_classifier.g  quantum_sim.g  triangle_renderer.g
gluon/stdlib/: collections.g  graphics.g  input.g  math.g  matrix.g  neural.g  quantum.g  signal.g  storage.g
iso-postmarketos/rust/atomos-app-handler/app-egui/: Cargo.toml
iso-postmarketos/rust/atomos-app-handler/app-egui/src/: layout.rs  lib.rs  main.rs
iso-postmarketos/rust/atomos-app-handler/app-egui/tests/: headless_render.rs
iso-postmarketos/rust/atomos-app-handler/app-gtk/: Cargo.toml
iso-postmarketos/rust/atomos-app-handler/app-gtk/src/: linux.rs  main.rs
iso-postmarketos/rust/atomos-home-bg/app-egui/: Cargo.toml
iso-postmarketos/rust/atomos-home-bg/app-egui/src/: ball.rs  lib.rs  main.rs  overlay.rs
iso-postmarketos/rust/atomos-home-bg/app-egui/tests/: headless_render.rs
iso-postmarketos/rust/atomos-home-bg/app-gtk/: Cargo.toml
iso-postmarketos/rust/atomos-home-bg/app-gtk/src/: linux.rs  main.rs
iso-postmarketos/rust/atomos-home-bg/core/: Cargo.toml
iso-postmarketos/rust/atomos-home/app-gtk/: Cargo.toml
iso-postmarketos/rust/atomos-lifecycle/: Cargo.toml
iso-postmarketos/rust/atomos-lifecycle/src/: daemon.rs  dbus.rs  input.rs  lib.rs  main.rs  process.rs  state.rs  wayland.rs
iso-postmarketos/rust/atomos-overview-chat-ui/app-egui/: Cargo.toml
iso-postmarketos/rust/atomos-overview-chat-ui/app-gtk/: Cargo.toml
iso-postmarketos/rust/atomos-preview/: Cargo.toml
iso-postmarketos/rust/atomos-preview/src/: main.rs
iso-postmarketos/rust/atomos-quick-settings/app-egui/: Cargo.toml
iso-postmarketos/rust/atomos-top-bar/app-egui/: Cargo.toml
iso-postmarketos/rust/atomos-top-bar/app-gtk/: Cargo.toml
kernel/kernel-aarch64/: Cargo.toml  build.rs  linker.ld  preview.sh  test-e2e.sh  test-gpu-contract.sh  test-gpu.sh  test-input.sh  test-virtio.sh  test.sh
kernel/kernel-aarch64/src/: allocator.rs  fdt.rs  gpu.rs  input.rs  kernel.rs  logger.rs  main.rs  memory.rs  mmu.rs  mte.rs  panic.rs  pci.rs  region.rs  start.s  uart.rs  virtio.rs  virtio_hal.rs
render/: Cargo.toml  README.md
render/src/: blend.rs  lib.rs  math.rs  rasterize.rs  region.rs
render/tests/: integration.rs
(+615 files in other folders)
