[package]
name = "cosmic-mobile-lockscreen"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cosmic-greeter"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Wayland session lock client
wayland-client = { version = "0.31", features = ["dlopen"] }
wayland-protocols = { version = "0.32", features = ["client", "staging"] }

# Software rendering (no GPU / system deps at compile time)
tiny-skia = "0.11"
fontdue = "0.9"
libc = "0.2"

# PAM authentication via dlopen (no compile-time libpam dependency)
libloading = "0.8"

# logind D-Bus integration (pure Rust, no system deps)
zbus = { version = "5", features = ["blocking"] }

# Wallpaper JPEG decoding
jpeg-decoder = "0.3"

# Reference iced UI (host-only; not compiled for release cross-builds)
iced = { version = "0.13", default-features = false, features = ["tiny-skia"], optional = true }

[features]
default = []
iced-preview = ["dep:iced"]

[dev-dependencies]
pretty_assertions = "1.4"
