[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atomos-agents"
version = "0.1.0"
description = "Atom OS Deep Agents Python integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.78.0",
    "grpcio-tools>=1.78.0",
    "protobuf>=4.25.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-ollama>=0.1.0",
    "langchain-groq>=0.1.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.2.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "deepagents>=0.4.0",
    # Secret storage — secretstorage talks to gnome-keyring via D-Bus on AtomOS
    "keyring>=25.0.0",
    "secretstorage>=3.3.0",
    # Fernet-encrypted file fallback for when D-Bus/gnome-keyring is unavailable
    "cryptography>=42.0.0",
    # ACP runtime for Zed/editor integrations (`from acp import ...`).
    # This package provides the `acp` Python module used by src/acp_server.py.
    "deepagents-acp>=0.0.4",
    # Chrome DevTools Protocol tools — imported as a library for browser
    # debugging (network, console, DOM, JS execution).  Coordinates with
    # browser-use via the same CDP port; no separate server process.
    "chrome-devtools-mcp-fork>=2.0.0",
    # Draw.io diagram tools — imported as a library for programmatic
    # diagram creation (flowcharts, UML, ER, C4, architecture, etc.).
    # No subprocess server; functions called directly in-process.
    "drawio-mcp>=1.0.0",
    # Notion tools — notion-mcp-ldraney brings notion-sdk-ldraney, a
    # Python SDK for the Notion API v2025-09-03.  We use the SDK client
    # directly (no MCP subprocess).  Requires NOTION_API_KEY at runtime.
    "notion-mcp-ldraney>=0.1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0"
]
local-browser = [
    # browser-use is installed with full deps in the ISO build BEFORE
    # atomos-agents so that all its transitive deps are present.  The
    # second pip install (atomos-agents) upgrades anthropic from the
    # 0.76.0 pin to >=0.78.0.  See install-atomos-agents.sh.
    "browser-use>=0.12.0",
    # Optional browser binary manager. Kept out of base deps because
    # musllinux/aarch64 wheels are not consistently available.
    "playwright>=1.40.0",
]
cloud-browser = [
    # Browser Use Cloud — primary browser backend when ~/.browser_use key exists.
    # v3.x is the current stable; v2 default import path is used.
    "browser-use-sdk>=3.0.0"
]
research-arxiv = [
    # arXiv research tools — optional because transitive deps (e.g. pymupdf)
    # may require native toolchains/libclang on musl targets.
    "arxiv-mcp-server>=0.3.0",
]
research-web = [
    # GPT Researcher — optional because its dependency stack can require
    # heavyweight native builds on musl targets.
    "gpt-researcher>=0.9.0",
]

[tool.atomos.security]
# Only tool packages whose backing pip dependency appears in [project.dependencies]
# can register tools.  Built-in, vendored, and OS-level adapters are always allowed.
# Set to false to disable whitelist enforcement (NOT recommended for production).
enforce_tool_whitelist = true

[tool.pytest.ini_options]
asyncio_mode = "strict"
markers = [
    "integration: tests that launch real Chromium inside Dockerfile.test container",
]
