[package]
name = "atomos-task-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.13", features = ["v4", "serde"] }
async-trait = "0.1"
futures = "0.3"
surrealdb = "2.0.4"
atomos-db = { path = "../atomos-db" }
