[package]
name = "atomos-home-app"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
atomos-home-core = { path = "../core" }
anyhow = "1"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { package = "gtk4", version = "0.10" }
gtk4-layer-shell = "0.7"
gio = "0.20"
zbus = { version = "4", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
async-channel = "2"

[[bin]]
name = "atomos-home"
path = "src/main.rs"