[package]
name = "atomos-overview-chat-ui-egui"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
atomos-overview-chat-ui = { path = "../core" }
eframe = { version = "0.33", default-features = true }

[[bin]]
name = "atomos-overview-chat-ui-dev"
path = "src/main.rs"
