[package]
name = "atomos-overview-chat-ui-app"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
atomos-overview-chat-ui = { path = "../core" }
gtk = { package = "gtk4", version = "0.9" }
adw = { package = "libadwaita", version = "0.7" }
anyhow = "1"

[target.'cfg(target_os = "linux")'.dependencies]
gtk4-layer-shell = "0.5"

[[bin]]
name = "atomos-overview-chat-ui"
path = "src/main.rs"
