[package]
name = "atomos-quick-settings-egui"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.33"
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow", "wayland"] }
atomos-theme = { path = "../../atomos-theme" }
window-vibrancy = "0.7.1"
raw-window-handle = "0.6.2"


[lib]
name = "atomos_quick_settings_egui"
path = "src/lib.rs"
