[package]
name = "atomos-top-bar-app-gtk"
version = "0.1.0"
edition = "2021"

[dependencies]
atomos-top-bar-core = { path = "../core" }
gtk = { package = "gtk4", version = "0.10" }
adw = { package = "libadwaita", version = "0.8" }
glib = "0.20"
tokio = { version = "1.0", features = ["rt", "macros", "time"] }
anyhow = "1"

[target.'cfg(target_os = "linux")'.dependencies]
gtk4-layer-shell = "0.7"

[[bin]]
name = "atomos-top-bar"
path = "src/main.rs"
